Implement tenant-aware permissions and seeding
Introduce a tenant-scoped role→permission system and wire it through seeding, APIs and the UI. Added DefaultRolePermissions and PlatformRolePermissions as single sources of truth for business-tenant and platform-role grants, extended PermissionsConstants/AuthoritiesConstants with platform permissions/roles, and updated TenantInitializationService to seed roles and permissions per-tenant (including platform-only grants). Reworked AuthorityPermissionService to use a per-tenant in-memory cache (load via AuthorityRepository.findAllWithPermissions) with eviction/refresh helpers and APIs to resolve effective permissions for a set of authorities. MeResponse now includes effective permissions and MeResource returns them; PlatformBillingResource is gated by a permission instead of a role. Also added front-end permission constants and a has-permission directive, adjusted tests and jest/angular config. These changes enable fine-grained, tenant-isolated authorization and deterministic seeding of permissions.